--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "@dnd-kit/core": "^6.0.8",
+    "dnd-kit": "^0.0.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "next": "13.2.4",
