--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
