--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@apollo/client": "^3.7.11",
     "cloudinary": "^1.36.2",
     "dotenv": "^16.0.3",
+    "firebase": "^9.21.0",
     "graphql": "^16.6.0",
     "next": "13.2.4",
     "next-cloudinary": "^4.4.0",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
     "react-masonry-css": "^1.0.16"
   },
